# rapha-model-scratch

./: .gitignore  README.md  audit_pipeline.py  augment_fill.py  cleanup_skeletons.py  collect_dataset.py  crypto_utils.py  fix_metadata.py  force_fill.py  inference_common.py  notes.md  phase_1_2_collect.py  phase_3_4_extract.py  phase_5_split.py  phase_6_7_train.py  phase_8_9_export.py  purge_rejected.py  pyproject.toml  realtime_infer.py  repair_metadata.py  requirements.txt  review_app.py  run_pipeline.py  stroke_assessment.py  test_mp.py  training_report.md
datasets/lower_limb/: augment_fill.py  clean_dataset.py  dataset_report.json  download_archive.txt  metadata.csv  temp_CgnMoSHF0qE.mp4.part  temp_p36hLPxu4CA.mp4.part  tensor_statistics.json  test_labels.csv  train_labels.csv  val_labels.csv  validation_report.json
datasets/lower_limb/skeletons/: ankle_0001.npy  ankle_0002.npy  ankle_0004.npy  ankle_0005.npy  ankle_0006.npy  ankle_0009.npy  ankle_0010.npy  ankle_0011.npy  ankle_0014.npy  ankle_0016.npy  ankle_0022.npy  ankle_0023.npy  ankle_0025.npy  ankle_0027.npy  ankle_0028.npy  ankle_0029.npy  ankle_0030.npy  ankle_0031.npy  ankle_0032.npy  ankle_0033.npy  ankle_0034.npy  ankle_0036.npy  ankle_0043.npy  ankle_0045.npy  ankle_0047.npy  ankle_0048.npy  ankle_0049.npy  ankle_aug_0029.npy  ankle_aug_0030.npy  ankle_aug_0031.npy  ankle_aug_0032.npy  ankle_aug_0034.npy  ankle_aug_0035.npy  ankle_aug_0036.npy  ankle_aug_0037.npy  ankle_aug_0038.npy  ankle_aug_0039.npy  ankle_aug_0041.npy  ankle_aug_0042.npy  ankle_aug_0043.npy  (+310 more)
domains/: lower_limb.py  upper_body.py
evaluation/lower_limb/: classification_report.txt  metrics.json
models/lower_limb/: best_model.onnx  deployment_metadata.json
src/rehab_pipeline/: run_pipeline.py
src/rehab_pipeline/common/: crypto.py  inference.py  preprocessing.py  (+1 more)
(+12 files in other folders)
